SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/Book_Flight__c.object-meta.xml
<CustomObject>
    <label>Book Flight</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Flight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>