SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/fields/Depart_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Depart_Arrive__c</fullName>
    <formula>Flight__r.Depart_Arrive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depart/Arrive</label>
    <type>Text</type>
</CustomField>