SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <formula>Flight__r.Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>