SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <formula>Flight__r.Departure_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>