SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Deloitte_Airlines__c</referenceTo>
    <relationshipLabel>Book Flights</relationshipLabel>
    <relationshipName>Book_Flights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>