SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fly Only</fullName>
                <default>true</default>
                <label>Fly Only</label>
            </value>
            <value>
                <fullName>Fly + Baggage</fullName>
            </value>
            <value>
                <fullName>Fly + Baggage + Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>