SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Book_Flight__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF(   ISPICKVAL(Package__c, &#39;Fly Only&#39;),  Flight__r.Fly_Only__c ,  IF(ISPICKVAL(Package__c, &#39;Fly + Baggage&#39;),  Flight__r.Fly_Baggage__c ,  IF(ISPICKVAL(Package__c, &#39;Fly + Baggage + Meal&#39;),  Flight__r.Fly_Baggage_Meal__c , 0) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>